// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' aggregatedDex > swapWithExactSupply > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(number)",
        "(number)",
        "(number)",
      ],
      "path": [
        {
          "Token": "ACA",
        },
        {
          "Token": "AUSD",
        },
        {
          "Token": "LDOT",
        },
      ],
      "trader": "23y3WetbNi6rDMgHmyRDjgpb7PnhgPotuPPawxruTMLYTLzG",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`'karura' aggregatedDex > swapWithExactSupply > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(number)",
        "(number)",
        "(number)",
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "ForeignAsset": "(number)",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;
